finish add content

--- a/index.html
+++ b/index.html
@@ -124,5 +124,94 @@
       </article>
       <article><button>Participe</button></article>
     </section>
+    <section>
+      <article>
+        <h1>Quem Somos?</h1>
+      </article>
+      <article>
+        <p>
+          Devido a defasagem na aprendizagem dos alunos, decorrente da Pandemia
+          Covid-19, nos anos de 2020 a 2022, Nós do Departamento de Educação,
+          por meio da Coordenação de Área de Matemática, elaboramos o Projeto:
+          “PREPARETEC” , cujo objetivo é preparar os alunos dos 9º Ano da Rede
+          Municipal de Ensino de Mongaguá, que buscam o ingresso ao Ensino Médio
+          nas Escolas Técnicas Públicas Profissionalizantes (Etecs).
+        </p>
+      </article>
+      <article>
+        <img src="public/assets/images/logoDEM.png" alt="" />
+        <img src="public/assets/images/logoEscolaAdolphoBerezin.png" alt="" />
+      </article>
+      <article>
+        <ul>
+          <li class="listTitle">Idealizadora:</li>
+          <li>Dalva Verardo - Coordenadora de Área de Matemática</li>
+          <li class="listTitle">Apoiadores E Colaboradores:</li>
+          <li>Priscila Eleutério - Diretora Municipal da Educação</li>
+          <li>Departamento de Educação de Mongaguá (DEM);</li>
+          <li>Prefeitura de Mongaguá;</li>
+          <li>ETEC Adolpho Berezin;</li>
+          <li class="listTitle">Symetra;</li>
+        </ul>
+      </article>
+      <article>
+        <div class="card">
+          <img src="public/assets/images/imgProfileDemerson.png" />
+          <label class="devName">Demerson</label>
+          <label class="office">Desenvolvedor</label>
+        </div>
+        <div class="card">
+          <img src="public/assets/images/imgProfileDemerson.png" />
+          <label class="devName">Felipe</label>
+          <label class="office"> Desenvolvedor</label>
+        </div>
+        <div class="card">
+          <img src="public/assets/images/imgProfileDemerson.png" />
+          <label class="devName">Ryan</label>
+          <label class="office"> Desenvolvedor</label>
+        </div>
+        <div class="card">
+          <img src="public/assets/images/imgProfileDemerson.png" />
+          <label class="devName">Sophia</label>
+          <label class="office"> Desenvolvedor</label>
+        </div>
+        <div class="card">
+          <img src="public/assets/images/imgProfileDemerson.png" />
+          <label class="devName">Thomas</label>
+          <label class="office"> Desenvolvedor</label>
+        </div>
+      </article>
+    </section>
+    <footer>
+      <article>
+        <aside><img src="public/assets/images/logoPreparetec" /></aside>
+        <aside>
+          <h1>Contato:</h1>
+          <div class="linkGroups"></div>
+        </aside>
+        <aside>
+          <h1>Downloads</h1>
+          <ul>
+            <li>Edital - Alunos</li>
+            <li>Documentação - Professores</li>
+          </ul>
+        </aside>
+        <aside>
+          <h1>Links:</h1>
+          <ul>
+            <li>Portal</li>
+            <li>Calendário</li>
+            <li>Inscrição De Professores</li>
+          </ul>
+        </aside>
+      </article>
+      <article>
+        <label>DEPARTAMENTO DE EDUCAÇÃO DE MONGAGUÁ</label>
+        <label> ETEC ADOLPHO BEREZIN</label>
+        <label> PREFEITURA DE MONGAGUÁ </label>
+        <label>PREPARETEC</label>
+        <label>SYMETRA</label>
+      </article>
+    </footer>
   </body>
 </html>
