iniciando o css, header quase pronta

--- a/screens/index.html
+++ b/screens/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PREPARETEC</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <header>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>PREPARETEC</title>
+
+  <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <section id='upper-header'>
+  </section>
+  <header>
+    <nav>
       <ul>
-        <li>Calendário</li>
-        <li>Nosso Projeto</li>
-        <li>Professores</li>
-        <li>Quem Somos?</li>
+        <li><a href='#mapa'>Calendário</a></li>
+        <li><a href="#nosso-projeto">Nosso Projeto</a></li>
+        <li><a href='#professores'>Professores</a></li>
+        <li><a href="#quem-somos">Quem Somos?</a></li>
         <li><button>Participe</button></li>
       </ul>
-    </header>
+    </nav>
+  </header>
+  <main>
     <section>
       <article>
         <h1>Seja Bem Vindo</h1>
@@ -73,14 +85,8 @@
             instituição.
           </p>
           <div class="imagesSection">
-            <img
-              src="public/assets/images/image1sectionAboutProject.png"
-              alt=""
-            />
-            <img
-              src="public/assets/images/image2sectionAboutProject.png"
-              alt=""
-            />
+            <img src="public/assets/images/image1sectionAboutProject.png" alt="" />
+            <img src="public/assets/images/image2sectionAboutProject.png" alt="" />
           </div>
         </aside>
         <aside>
@@ -88,10 +94,7 @@
           Int. de Textos, Matemática, História, Geografia, Química, Física e
           Biologia. Aulas de Inteligência Emocional, para que o aluno sinta-se
           seguro emocionalmente durante a avaliação.
-          <img
-            src="public/assets/images/image3sectionAboutProject.png"
-            alt=""
-          />
+          <img src="public/assets/images/image3sectionAboutProject.png" alt="" />
         </aside>
       </article>
     </section>
@@ -212,6 +215,9 @@
         <label>PREPARETEC</label>
         <label>SYMETRA</label>
       </article>
+
     </footer>
-  </body>
+  </main>
+</body>
+
 </html>
