--- a/screens/index.html
+++ b/screens/index.html
@@ -27,7 +27,7 @@
         <li><a href="#nosso-projeto">Nosso Projeto</a></li>
         <li><a href='#professores'>Professores</a></li>
         <li><a href="#quem-somos">Quem Somos?</a></li>
-        <li><button>Participe</button></li>
+        <li><a href="#participe" class="btn-p">Participe</a></li>
       </ul>
     </nav>
   </header>
@@ -42,18 +42,18 @@
           Mongaguá.
         </p>
       </article>
-      <article>
+      <article class="links">
         <aside>
           <h1>Para Alunos:</h1>
-          <ul>
-            <li><a href="">Acesse o Calendário</a></li>
+          <ul class="list-links">
+            <li class=""><a href="">Acesse o Calendário</a></li>
             <li><a href="">Saiba Mais</a></li>
             <li><a href="">Acessar Documentação</a></li>
           </ul>
         </aside>
         <aside>
           <h1>Para Professores:</h1>
-          <ul>
+          <ul class="list-links">  <!-- CORRIGIR A MARGEM DOS TEXTOS -->
             <li><a href="">Faça Parte</a></li>
             <li><a href="">Saiba Mais</a></li>
             <li><a href="">Acessar Documentação</a></li>
@@ -69,12 +69,13 @@
         </div>
       </article>
     </section>
-    <section>
+    <section class="nosso">
       <article>
-        <h1>Nosso Projeto</h1>
+        <h2>Nosso Projeto</h1>
+        <div class="line"></div>
       </article>
       <article>
-        <aside>
+        <aside class="flex-l">
           <p>
             Para realizar o sonho de estudar nas escolas técnicas, é necessário
             preparo com antecedência, por isso revisar e fixar as matérias das
@@ -92,23 +93,31 @@
             <img src="public/assets/images/image2sectionAboutProject.png" alt="" />
           </div>
         </aside>
-        <aside>
-          O curso é formado pelas disciplinas de Língua Portuguesa: Gramática,
-          Int. de Textos, Matemática, História, Geografia, Química, Física e
-          Biologia. Aulas de Inteligência Emocional, para que o aluno sinta-se
-          seguro emocionalmente durante a avaliação.
-          <img src="public/assets/images/image3sectionAboutProject.png" alt="" />
+        <aside class="flex-r">
+          <div class="item">
+            <img src="public/assets/images/image3sectionAboutProject.png" alt="" />
+          </div>
+          <div class="item">
+            <p>
+              O curso é formado pelas disciplinas de Língua Portuguesa: Gramática,
+            Int. de Textos, Matemática, História, Geografia, Química, Física e
+            Biologia. Aulas de Inteligência Emocional, para que o aluno sinta-se
+            seguro emocionalmente durante a avaliação.
+            </p>
+          </div>
+          
         </aside>
       </article>
     </section>
-    <section>
+    <section class="prof">
       <article>
         <h1>Professores</h1>
+        <div class="line-green"></div>
       </article>
       <article>
         <aside>
-          <h1>Quem Pode?</h1>
-          <p>
+          <h2>Quem Pode?</h1>
+          <p class="item w">
             Professoress, universitários voluntários ou Estagiários que se
             disponibilizam a solucionar dúvidas sobre os conteúdos ministrados,
             possibilitando o desenvolvimento de competências e habilidades do
@@ -121,14 +130,14 @@
         </aside>
         <aside>
           <img src="public/assets/images/image1sectionTechers" alt="" />
-          <p>
+          <p class="w">
             E Aí, professor Preparado para embarcar nessa Jornada? é um trabalho
             voluntário de aproximadamente 2 horas semanais, e assinamos a carga
             horária
           </p>
         </aside>
       </article>
-      <article><button>Participe</button></article>
+      <article><a href="#participe" class="btn-p">Participe</a></article>
     </section>
     <section>
       <article>
