começando a header la

--- a/screens/index.html
+++ b/screens/index.html
@@ -17,7 +17,8 @@
 <body>
   <section id='upper-header'>
     <article>
-      
+      <img src="../assets/images/preparetec-logo.png" alt="" />
+      <img src="../assets/images/logoDEM.png" alt="" />
     </article>
   </section>
   <header>
@@ -35,12 +36,12 @@
     <section>
       <article>
         <h1>Seja Bem Vindo</h1>
-        <p>
+        <div>
           Este É o Site Oficial do Projeto PREPARETEC, o cursinho preparatório
           para as escolas técnicas com ensino médio, uma iniciativa aprovada e
           apoiada pela Prefeitura de Mongaguá e Pelo Departamento de Educação de
           Mongaguá.
-        </p>
+        </div>
       </article>
       <article class="links">
         <aside>
@@ -53,7 +54,8 @@
         </aside>
         <aside>
           <h1>Para Professores:</h1>
-          <ul class="list-links">  <!-- CORRIGIR A MARGEM DOS TEXTOS -->
+          <ul class="list-links">
+            <!-- CORRIGIR A MARGEM DOS TEXTOS -->
             <li><a href="">Faça Parte</a></li>
             <li><a href="">Saiba Mais</a></li>
             <li><a href="">Acessar Documentação</a></li>
@@ -72,7 +74,7 @@
     <section class="nosso">
       <article>
         <h2>Nosso Projeto</h1>
-        <div class="line"></div>
+          <div class="line"></div>
       </article>
       <article>
         <aside class="flex-l">
@@ -100,12 +102,12 @@
           <div class="item">
             <p>
               O curso é formado pelas disciplinas de Língua Portuguesa: Gramática,
-            Int. de Textos, Matemática, História, Geografia, Química, Física e
-            Biologia. Aulas de Inteligência Emocional, para que o aluno sinta-se
-            seguro emocionalmente durante a avaliação.
+              Int. de Textos, Matemática, História, Geografia, Química, Física e
+              Biologia. Aulas de Inteligência Emocional, para que o aluno sinta-se
+              seguro emocionalmente durante a avaliação.
             </p>
           </div>
-          
+
         </aside>
       </article>
     </section>
@@ -117,16 +119,16 @@
       <article>
         <aside>
           <h2>Quem Pode?</h1>
-          <p class="item w">
-            Professoress, universitários voluntários ou Estagiários que se
-            disponibilizam a solucionar dúvidas sobre os conteúdos ministrados,
-            possibilitando o desenvolvimento de competências e habilidades do
-            aluno
-            <br />
-            O Cursinho preza pelo desenvolvimento dos monitores, fazendo com que
-            estes ministrem aulas esporádicas em conjunto com o tutor
-            (coordenação de área).
-          </p>
+            <p class="item w">
+              Professoress, universitários voluntários ou Estagiários que se
+              disponibilizam a solucionar dúvidas sobre os conteúdos ministrados,
+              possibilitando o desenvolvimento de competências e habilidades do
+              aluno
+              <br />
+              O Cursinho preza pelo desenvolvimento dos monitores, fazendo com que
+              estes ministrem aulas esporádicas em conjunto com o tutor
+              (coordenação de área).
+            </p>
         </aside>
         <aside>
           <img src="public/assets/images/image1sectionTechers" alt="" />
