--- a/screens/index.html
+++ b/screens/index.html
@@ -20,6 +20,44 @@
       <img src="../assets/images/preparetec-logo.png" alt="" />
       <img src="../assets/images/logoDEM.png" alt="" />
     </article>
+    <article id='chats'>
+      <div id='left-chat'>
+        <div class="baloes-left-chat">
+          <div class="balao-left">
+            <img src="../assets/images/balao1.png">
+          </div>
+          <div class="user-chat">
+            <img src="../assets/images/user-upper-header.png">
+          </div>
+        </div>
+        <div class="baloes-left-chat">
+          <div class="balao-left">
+            <img src="../assets/images/balao3.png">
+          </div>
+          <div class="user-chat">
+            <img src="../assets/images/user-upper-header.png">
+          </div>
+        </div>
+        <div class="baloes-left-chat">
+          <div class="balao-left">
+            <img src="../assets/images/balao4.png">
+          </div>
+          <div class="user-chat">
+            <img src="../assets/images/user-upper-header.png">
+          </div>
+        </div>
+      </div>
+      <div id='right-chat'>
+        <div class="baloes-right-chat">
+          <div class="balao-right">
+            <img src="../assets/images/balao2.png">
+          </div>
+          <div class="user-chat">
+            <img src="../assets/images/user-upper-header.png">
+          </div>
+        </div>
+      </div>
+    </article>
   </section>
   <header>
     <nav>
