--- a/screens/index.html
+++ b/screens/index.html
@@ -17,7 +17,7 @@
 <body>
   <section id='upper-header'>
     <article>
-      <img src="../assets/images/preparetec-logo.png" alt="" />
+      <img src="../assets/images/logoPreparetec.png" alt="" />
       <img src="../assets/images/logoDEM.png" alt="" />
     </article>
     <article id='chats'>
@@ -103,9 +103,9 @@
       <article>
         <div class="agradecimentosContainer">
           <label>Iniciativa Aprovada E Apoiada Por: </label>
-          <img src="public/assets/images/logoDEM.png" alt="" />
-          <img src="public/assets/images/logoPrefeituraMongagua.png" alt="" />
-          <img src="public/assets/images/logoEscolaAdolphoBerezin.png" alt="" />
+          <img src="/assets/images/logoDEM.png" alt="" />
+          <img src="/assets/images/logoPrefeituraMongagua.png" alt="" />
+          <img src="/assets/images/logoEscolaAdolphoBerezin.png" alt="" />
         </div>
       </article>
     </section>
@@ -129,13 +129,13 @@
             instituição.
           </p>
           <div class="imagesSection">
-            <img src="public/assets/images/image1sectionAboutProject.png" alt="" />
-            <img src="public/assets/images/image2sectionAboutProject.png" alt="" />
+            <img src="/assets/images/image1sectionAboutProject.png" alt="" />
+            <img src="/assets/images/image2sectionAboutProject.png" alt="" />
           </div>
         </aside>
         <aside class="flex-r">
           <div class="item">
-            <img src="public/assets/images/image3sectionAboutProject.png" alt="" />
+            <img src="/assets/images/image3sectionAboutProject.png" alt="" />
           </div>
           <div class="item">
             <p>
@@ -169,7 +169,7 @@
             </p>
         </aside>
         <aside>
-          <img src="public/assets/images/image1sectionTechers" alt="" />
+          <img src="/assets/images/image1sectionTechers" alt="" />
           <p class="w">
             E Aí, professor Preparado para embarcar nessa Jornada? é um trabalho
             voluntário de aproximadamente 2 horas semanais, e assinamos a carga
@@ -194,8 +194,8 @@
         </p>
       </article>
       <article>
-        <img src="public/assets/images/logoDEM.png" alt="" />
-        <img src="public/assets/images/logoEscolaAdolphoBerezin.png" alt="" />
+        <img src="/assets/images/logoDEM.png" alt="" />
+        <img src="/assets/images/logoEscolaAdolphoBerezin.png" alt="" />
       </article>
       <article>
         <ul>
@@ -211,27 +211,27 @@
       </article>
       <article>
         <div class="card">
-          <img src="public/assets/images/imgProfileDemerson.png" />
+          <img src="" alt="cade a foto demerson" />
           <label class="devName">Demerson</label>
           <label class="office">Desenvolvedor</label>
         </div>
         <div class="card">
-          <img src="public/assets/images/imgProfileDemerson.png" />
+          <img src="/assets/images/felipe.jpg" />
           <label class="devName">Felipe</label>
           <label class="office"> Desenvolvedor</label>
         </div>
         <div class="card">
-          <img src="public/assets/images/imgProfileDemerson.png" />
+          <img src="" alt="cade a foto ryan" />
           <label class="devName">Ryan</label>
           <label class="office"> Desenvolvedor</label>
         </div>
         <div class="card">
-          <img src="public/assets/images/imgProfileDemerson.png" />
+          <img src="/assets/images/sophia.jpeg" />
           <label class="devName">Sophia</label>
           <label class="office"> Desenvolvedor</label>
         </div>
         <div class="card">
-          <img src="public/assets/images/imgProfileDemerson.png" />
+          <img src="/assets/images/thomas.jpg" />
           <label class="devName">Thomas</label>
           <label class="office"> Desenvolvedor</label>
         </div>
@@ -239,7 +239,7 @@
     </section>
     <footer>
       <article>
-        <aside><img src="public/assets/images/logoPreparetec" /></aside>
+        <aside><img src="/assets/images/logoPreparetec.png" /></aside>
         <aside>
           <h1>Contato:</h1>
           <div class="linkGroups"></div>
