adjusting layout in upper header

--- a/screens/index.html
+++ b/screens/index.html
@@ -23,39 +23,32 @@
     <article id='chats'>
       <div id='left-chat'>
         <div class="baloes-left-chat">
-          <div class="balao-left">
-            <img src="../assets/images/balao1.png">
-          </div>
-          <div class="user-chat">
-            <img src="../assets/images/user-upper-header.png">
-          </div>
+          <img class="user-img" src="../assets/images/user-upper-header.png">
+         <img src="../assets/images/balao1.png">     
         </div>
         <div class="baloes-left-chat">
-          <div class="balao-left">
+          <img  class="user-img" src="../assets/images/user-upper-header.png">
             <img src="../assets/images/balao3.png">
-          </div>
-          <div class="user-chat">
-            <img src="../assets/images/user-upper-header.png">
-          </div>
         </div>
         <div class="baloes-left-chat">
-          <div class="balao-left">
+          <img class="user-img" src="../assets/images/user-upper-header.png"> 
             <img src="../assets/images/balao4.png">
-          </div>
-          <div class="user-chat">
-            <img src="../assets/images/user-upper-header.png">
-          </div>
         </div>
       </div>
       <div id='right-chat'>
         <div class="baloes-right-chat">
-          <div class="balao-right">
-            <img src="../assets/images/balao2.png">
-          </div>
-          <div class="user-chat">
-            <img src="../assets/images/user-upper-header.png">
-          </div>
+          <img src="../assets/images/balao1.png">     
+          <img class="user-img" src="../assets/images/user-upper-header.png">
         </div>
+        <div class="baloes-right-chat">
+          <img src="../assets/images/balao3.png">
+          <img  class="user-img" src="../assets/images/user-upper-header.png">
+        </div>
+        <div class="baloes-right-chat">
+          <img src="../assets/images/balao4.png">
+          <img class="user-img" src="../assets/images/user-upper-header.png"> 
+        </div>
+      </div>
       </div>
     </article>
   </section>
