iniciando nossos projetos

--- a/screens/index.html
+++ b/screens/index.html
@@ -98,7 +98,7 @@
       </article>
       <article>
         <aside class='nosso-projeto-1'>
-          <div>
+          <div class='nosso-projeto-texto1'>
             Para realizar o sonho de estudar nas escolas técnicas, é necessário
             preparo com antecedência, por isso revisar e fixar as matérias das
             avaliações ao longo do ano, certamente poderá garantir um bom
@@ -110,9 +110,7 @@
             no Ensino Médio, Integrado ou Técnico de acordo com edital de cada
             instituição.
           </div>
-          <div>
-            <img href="assets/images/noosso-projeto-imagem1.png">
-          </div>
+          <div class="nosso-projeto-imagem1"></div>
         </aside>
         <aside class="flex-r">
           <div class="item">
