seção nosso projeto finalizada!

--- a/screens/index.html
+++ b/screens/index.html
@@ -15,38 +15,6 @@
 </head>
 
 <body>
-  <!--<section id='upper-header'>
-    <article id='logos'>
-      <img src="../assets/images/logoPreparetec.png" alt="" />
-      <img src="../assets/images/logoDEM.png" alt="" />
-    </article>
-    <article id='chats'>
-      <div id='left-chat'>
-        <div class="baloes-left-chat">
-          <img class="user-img" src="../assets/images/user-upper-header.png">
-          <img src="../assets/images/balao1.png">
-        </div>
-        <div class="baloes-left-chat">
-          <img class="user-img" src="../assets/images/user-upper-header.png">
-          <img src="../assets/images/balao3.png">
-        </div>
-        <div class="baloes-left-chat">
-          <img class="user-img" src="../assets/images/user-upper-header.png">
-          <img src="../assets/images/balao4.png">
-        </div>
-      </div>
-      <div id='bonequinho-container'>
-        <div id="bonequinho"></div>
-      </div>
-      <div id='right-chat'>
-        <div class="baloes-right-chat">
-          <img src="../assets/images/balao2.png">
-          <img class="user-img" src="../assets/images/user-upper-header.png">
-        </div>
-      </div>
-      </div>
-    </article>
-  </section>-->
   <header>
     <nav>
       <ul>
@@ -59,7 +27,7 @@
     </nav>
   </header>
   <main>
-    <section id='inicio'>
+    <section id='mapa'>
       <article id='inicio-content'>
         <h2>Seja Bem Vindo</h2>
         <div class="inicio-text">
@@ -83,7 +51,6 @@
         <aside class="professores">
           <h1>Para Professores:</h1>
           <ul class="list-links">
-            <!-- CORRIGIR A MARGEM DOS TEXTOS -->
             <li><a href="">Faça Parte</a></li>
             <li><a href="">Saiba Mais</a></li>
             <li><a href="">Acessar Documentação</a></li>
@@ -91,12 +58,13 @@
         </aside>
       </article>
     </section>
-    <section class="nosso">
+    <section id="nosso-projeto">
       <article>
         <h2>Nosso Projeto</h2>
         <div class="line"></div>
       </article>
       <article>
+
         <aside class='nosso-projeto-1'>
           <div class='nosso-projeto-texto1'>
             Para realizar o sonho de estudar nas escolas técnicas, é necessário
@@ -112,23 +80,46 @@
           </div>
           <div class="nosso-projeto-imagem1"></div>
         </aside>
-        <aside class="flex-r">
-          <div class="item">
-            <img src="/assets/images/image3sectionAboutProject.png" alt="" />
+
+        <aside class="nosso-projeto-2">
+          <div class="nosso-projeto-imagem2"></div>
+          <div class="nosso-projeto-imagem3"></div>
+          <div></div>
+          <div class="nosso-projeto-texto2">
+            O curso é formado pelas disciplinas de Língua Portuguesa: Gramática,
+            Int. de Textos, Matemática, História, Geografia, Química, Física e
+            Biologia. Aulas de Inteligência Emocional, para que o aluno sinta-se
+            seguro emocionalmente durante a avaliação.
           </div>
-          <div class="item">
-            <div>
-              O curso é formado pelas disciplinas de Língua Portuguesa: Gramática,
-              Int. de Textos, Matemática, História, Geografia, Química, Física e
-              Biologia. Aulas de Inteligência Emocional, para que o aluno sinta-se
-              seguro emocionalmente durante a avaliação.
+        </aside>
+
+        <article id='polos'>
+          <h2>Como Vai Funcionar</h2>
+          <div class="line"></div>
+          <div class="container-polos">
+            <div class='card-polos'>
+              <div class="titulo-card-polos">Polo 1</div>
+              <div class="escolas-card-polos">E.M.E.F. Sirana Koukdjian</div>
+              <div class="escolas-card-polos">E.M.E.F Hortência Quintuno de Farias Botelho</div>
+              <div class="escolas-card-polos">E.M.E.F José Cesário Pereira Filho</div>
+            </div>
+            <div class='card-polos'>
+              <div class="titulo-card-polos">Polo 2</div>
+              <div class="escolas-card-polos">E.M.E.F. Jacoub Koukdjian</div>
+              <div class="escolas-card-polos">E.M.E.F Regina Maria</div>
+              <div class="escolas-card-polos">E.M.E.F Vereador José Carlos de Freitas</div>
             </div>
           </div>
-
-        </aside>
+          <div class='polos-content'>
+            <div class="texto-polos">As aulas serão duas vezes na semana, divididas por polos, pra que fique mais
+              próximo de onde você aluno,
+              mora e estuda! Esses polos estão descritos acima, para que você conheça seu polo. São aulas presenciais, e
+              os alunos cadastrados aqui no site terão acesso ao dia, horário e local das aulas aqui pelo site!</div>
+          </div>
+        </article>
       </article>
     </section>
-    <section class="prof">
+    <section id="professores">
       <article>
         <h1>Professores</h1>
         <div class="line-green"></div>
