faltando o footer e a parte das fotos

--- a/screens/index.html
+++ b/screens/index.html
@@ -122,39 +122,43 @@
     
     <section id="professores">
       <article>
-        <h1>Professores</h1>
+        <h1 class="titulo-green">Professores</h1>
         <div class="line-green"></div>
       </article>
-      <article>
+      <article class="prof-content">
         <aside>
           <h2>Quem Pode?</h1>
+            <div class="cont-professores">
             <p class="item w">
               Professoress, universitários voluntários ou Estagiários que se
               disponibilizam a solucionar dúvidas sobre os conteúdos ministrados,
               possibilitando o desenvolvimento de competências e habilidades do
-              aluno
-              <br />
+              aluno.
+              <br>
               O Cursinho preza pelo desenvolvimento dos monitores, fazendo com que
               estes ministrem aulas esporádicas em conjunto com o tutor
               (coordenação de área).
             </p>
-        </aside>
-        <aside>
-          <img src="/assets/images/image1sectionTechers" alt="" />
-          <p class="w">
-            E Aí, professor Preparado para embarcar nessa Jornada? é um trabalho
-            voluntário de aproximadamente 2 horas semanais, e assinamos a carga
-            horária
-          </p>
+            <!-- Gambiarra na imagem só para usar como base (na hora de colocar a imagem certa, será arrumado)-->
+            <img src="../assets/images/calculadora.jpg" height="200" alt="">
+            </div>
+            <!-- Esquece o aside que deixa para direita, pois o texto não cobre o espaço suficiente para deixar maneiro-->
+            <p class="item-left">
+              E Aí, professor Preparado para embarcar nessa Jornada? é um trabalho
+              voluntário de aproximadamente 2 horas semanais, e assinamos a carga
+              horária
+            </p>
+            <a href="#participe" class="btn-p-main">Participe</a>
         </aside>
       </article>
-      <article><a href="#participe" class="btn-p">Participe</a></article>
     </section>
-    <section>
+    <section id="quemsomos">
       <article>
-        <h1>Quem Somos?</h1>
+        <h2 class="blue">Quem Somos?</h2>
+        <div class="line"></div>
       </article>
       <article>
+        <div class="item">
         <p>
           Devido a defasagem na aprendizagem dos alunos, decorrente da Pandemia
           Covid-19, nos anos de 2020 a 2022, Nós do Departamento de Educação,
@@ -163,12 +167,16 @@
           Municipal de Ensino de Mongaguá, que buscam o ingresso ao Ensino Médio
           nas Escolas Técnicas Públicas Profissionalizantes (Etecs).
         </p>
+      </div>
       </article>
       <article>
-        <img src="/assets/images/logoDEM.png" alt="" />
+        <div class="image-logo">
+          <img src="/assets/images/logoDEM.png" alt="" />
         <img src="/assets/images/logoEscolaAdolphoBerezin.png" alt="" />
+        </div>
+        
       </article>
-      <article>
+      <article class="mentores">
         <ul>
           <li class="listTitle">Idealizadora:</li>
           <li>Dalva Verardo - Coordenadora de Área de Matemática</li>
@@ -180,9 +188,10 @@
           <li class="listTitle">Symetra;</li>
         </ul>
       </article>
-      <article>
+      <!-- a terminar -->
+      <article class="sobrenos">
         <div class="card">
-          <img src="" alt="cade a foto demerson" />
+          <img src="" alt="cade a foto demerson"/>
           <label class="devName">Demerson</label>
           <label class="office">Desenvolvedor</label>
         </div>
@@ -218,16 +227,16 @@
         <aside>
           <h1>Downloads</h1>
           <ul>
-            <li>Edital - Alunos</li>
-            <li>Documentação - Professores</li>
+            <li><a href="">Edital - Alunos</a> </li>
+            <li><a href="">Documentação - Professores</a> </li>
           </ul>
         </aside>
         <aside>
           <h1>Links:</h1>
           <ul>
-            <li>Portal</li>
-            <li>Calendário</li>
-            <li>Inscrição De Professores</li>
+            <li><a href="">Portal</a> </li>
+            <li><a href="">Calendário</a> </li>
+            <li><a href="">Inscrição De Professores</a></li>
           </ul>
         </aside>
       </article>
