seção professor pronta :)

--- a/screens/index.html
+++ b/screens/index.html
@@ -41,7 +41,7 @@
       </article>
       <article class="links">
         <aside class="alunos">
-          <h1>Para Alunos:</h1>
+          <p>Para Alunos:</p>
           <ul class="list-links">
             <li class=""><a href="">Acesse o Calendário</a></li>
             <li><a href="">Saiba Mais</a></li>
@@ -49,7 +49,7 @@
           </ul>
         </aside>
         <aside class="professores">
-          <h1>Para Professores:</h1>
+          <p>Para Professores:</p>
           <ul class="list-links">
             <li><a href="">Faça Parte</a></li>
             <li><a href="">Saiba Mais</a></li>
@@ -119,37 +119,39 @@
         </article>
       </article>
     </section>
-    
+
     <section id="professores">
       <article>
         <h1 class="titulo-green">Professores</h1>
         <div class="line-green"></div>
       </article>
+      <h2>Quem Pode?</h2>
       <article class="prof-content">
-        <aside>
-          <h2>Quem Pode?</h1>
-            <div class="cont-professores">
-            <p class="item w">
-              Professoress, universitários voluntários ou Estagiários que se
-              disponibilizam a solucionar dúvidas sobre os conteúdos ministrados,
-              possibilitando o desenvolvimento de competências e habilidades do
-              aluno.
-              <br>
-              O Cursinho preza pelo desenvolvimento dos monitores, fazendo com que
-              estes ministrem aulas esporádicas em conjunto com o tutor
-              (coordenação de área).
-            </p>
-            <!-- Gambiarra na imagem só para usar como base (na hora de colocar a imagem certa, será arrumado)-->
-            <img src="../assets/images/calculadora.jpg" height="200" alt="">
-            </div>
-            <!-- Esquece o aside que deixa para direita, pois o texto não cobre o espaço suficiente para deixar maneiro-->
-            <p class="item-left">
-              E Aí, professor Preparado para embarcar nessa Jornada? é um trabalho
-              voluntário de aproximadamente 2 horas semanais, e assinamos a carga
-              horária
-            </p>
-            <a href="#participe" class="btn-p-main">Participe</a>
-        </aside>
+        <div class="cont-professores">
+          <p class="item w">
+            Professores, universitários voluntários ou Estagiários que se
+            disponibilizam a solucionar dúvidas sobre os conteúdos ministrados,
+            possibilitando o desenvolvimento de competências e habilidades do
+            aluno.
+          </p>
+          <p class="item w">
+            O Cursinho preza pelo desenvolvimento dos monitores, fazendo com que
+            estes ministrem aulas esporádicas em conjunto com o tutor
+            (coordenação de área).
+          </p>
+          <!-- Gambiarra na imagem só para usar como base (na hora de colocar a imagem certa, será arrumado)-->
+        </div>
+        <img src="../assets/images/professor.png" height="200" alt="">
+
+        <!-- Esquece o aside que deixa para direita, pois o texto não cobre o espaço suficiente para deixar maneiro-->
+        <div class="item-center">
+          <p>
+            E Aí, professor Preparado para embarcar nessa Jornada? é um trabalho
+            voluntário de aproximadamente 2 horas semanais, e assinamos a carga
+            horária
+          </p>
+          <a href="#participe" class="btn-p-main">Participe</a>
+        </div>
       </article>
     </section>
     <section id="quemsomos">
@@ -159,22 +161,22 @@
       </article>
       <article>
         <div class="item">
-        <p>
-          Devido a defasagem na aprendizagem dos alunos, decorrente da Pandemia
-          Covid-19, nos anos de 2020 a 2022, Nós do Departamento de Educação,
-          por meio da Coordenação de Área de Matemática, elaboramos o Projeto:
-          “PREPARETEC” , cujo objetivo é preparar os alunos dos 9º Ano da Rede
-          Municipal de Ensino de Mongaguá, que buscam o ingresso ao Ensino Médio
-          nas Escolas Técnicas Públicas Profissionalizantes (Etecs).
-        </p>
-      </div>
+          <p>
+            Devido a defasagem na aprendizagem dos alunos, decorrente da Pandemia
+            Covid-19, nos anos de 2020 a 2022, Nós do Departamento de Educação,
+            por meio da Coordenação de Área de Matemática, elaboramos o Projeto:
+            “PREPARETEC” , cujo objetivo é preparar os alunos dos 9º Ano da Rede
+            Municipal de Ensino de Mongaguá, que buscam o ingresso ao Ensino Médio
+            nas Escolas Técnicas Públicas Profissionalizantes (Etecs).
+          </p>
+        </div>
       </article>
       <article>
         <div class="image-logo">
           <img src="/assets/images/logoDEM.png" alt="" />
-        <img src="/assets/images/logoEscolaAdolphoBerezin.png" alt="" />
+          <img src="/assets/images/logoEscolaAdolphoBerezin.png" alt="" />
         </div>
-        
+
       </article>
       <article class="mentores">
         <ul>
@@ -191,12 +193,12 @@
       <!-- a terminar -->
       <article class="sobrenos">
         <div class="card">
-          <img src="" alt="cade a foto demerson"/>
+          <img src="" alt="cade a foto demerson" />
           <label class="devName">Demerson</label>
           <label class="office">Desenvolvedor</label>
         </div>
         <div class="card">
-          <img src="/assets/images/felipe.jpg" />
+          <img src="../assets/images/felipe.jpg" />
           <label class="devName">Felipe</label>
           <label class="office"> Desenvolvedor</label>
         </div>
@@ -206,12 +208,12 @@
           <label class="office"> Desenvolvedor</label>
         </div>
         <div class="card">
-          <img src="/assets/images/sophia.jpeg" />
+          <img src="../assets/images/sophia.jpeg" />
           <label class="devName">Sophia</label>
           <label class="office"> Desenvolvedor</label>
         </div>
         <div class="card">
-          <img src="/assets/images/thomas.jpg" />
+          <img src="../assets/images/thomas.jpg" />
           <label class="devName">Thomas</label>
           <label class="office"> Desenvolvedor</label>
         </div>
@@ -221,18 +223,18 @@
       <article>
         <aside><img src="/assets/images/logoPreparetec.png" /></aside>
         <aside>
-          <h1>Contato:</h1>
+          <h2>Contato:</h2>
           <div class="linkGroups"></div>
         </aside>
         <aside>
-          <h1>Downloads</h1>
+          <h2>Downloads</h2>
           <ul>
             <li><a href="">Edital - Alunos</a> </li>
             <li><a href="">Documentação - Professores</a> </li>
           </ul>
         </aside>
         <aside>
-          <h1>Links:</h1>
+          <h2>Links:</h2>
           <ul>
             <li><a href="">Portal</a> </li>
             <li><a href="">Calendário</a> </li>
