upper header feita

--- a/screens/index.html
+++ b/screens/index.html
@@ -15,6 +15,14 @@
 </head>
 
 <body>
+  <section class='upper-header'>
+    <article class='left-upper'>
+    </article>
+    <article class="right-upper">
+      <aside class="logo-dem"></aside>
+      <aside class="logo-prefeitura"></aside>
+    </article>
+  </section>
   <header>
     <nav>
       <ul>
@@ -36,7 +44,9 @@
           apoiada pela Prefeitura de Mongaguá e pelo Departamento de Educação de
           Mongaguá. Nosso objetivo é atrair os alunos do Ensino Fundamental II, mais especificamente, alunos do 9º
           (nono) ano do ensino fundamental e instigar neles o interesse de adentrar em uma escola técnica com ensino
-          médio, afim de recuperar o regresso dos alunos, consequência dos dois anos de pandemia e aulas em casa.
+          médio, afim de recuperar o regresso dos alunos, consequência dos dois anos de pandemia e aulas em casa. Além
+          de plantar essa semente de interesse, também vamos orientá-los com os mais atualizados conteúdos que caem
+          constantemente nas provas, todas as matérias inclusas.
         </div>
       </article>
       <article class="links">
@@ -154,13 +164,13 @@
         </div>
       </article>
     </section>
-    <section id="quemsomos">
+    <section id="quem-somos">
       <article>
         <h2 class="blue">Quem Somos?</h2>
         <div class="line"></div>
       </article>
-      <article>
-        <div class="item">
+      <article class="quem-somos-content">
+        <div class="item qs">
           <p>
             Devido a defasagem na aprendizagem dos alunos, decorrente da Pandemia
             Covid-19, nos anos de 2020 a 2022, Nós do Departamento de Educação,
